# workflow-satisfiability-experiments

./: Cargo.toml  auth_sets.txt  bench_runner.py  combine_results.py  graph.txt  instance0.txt  instance99.txt
benches/: my_benchmark.rs
solvers/: datatypes.py  solver_ortools_pbpb.py  solver_ortools_udpb.py
src/: back_jumping_predicate.rs  bipartite_matching.rs  lib.rs  main.rs  partition_generator.rs  planning.rs  planning_misc.rs  predicates.rs  workflow.rs
