[package]
name = "planner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "planner"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[[bench]]
name = "my_benchmark"
path = "benches/my_benchmark.rs"
harness = false
opt-level = 3
overflow-checks = false

[profile.bench]
debug = true


[dev-dependencies]
criterion = "0.5.1"

[dependencies]
